erDiagram

    TENANT {
        string TenantID PK
        string Name
        int Age
        float Budget
        string Habits
        string Preferences
        string Phone
        string Email
        datetime CreatedAt
        datetime UpdatedAt
    }

    LANDLORD {
        string LandlordID PK
        string Name
        string Phone
        string Email
        datetime CreatedAt
        datetime UpdatedAt
    }

    ACCOUNT {
        string AccountID PK
        string Username
        string PasswordHash
        string Role
        string Status
    }

    ROOM {
        string RoomID PK
        string LandlordID FK
        string RoomType
        string Status
        float Price
        string Description
        datetime CreatedAt
        datetime UpdatedAt
    }

    LOCATION {
        string LocationID PK
        string Address
        string Ward
        string District
        string City
        float Latitude
        float Longitude
    }

    AMENITY {
        string AmenityID PK
        string AmenityName
        string Description
    }

    ROOM_AMENITY {
        string RoomID FK
        string AmenityID FK
    }

    ROOM_IMAGE {
        string ImageID PK
        string RoomID FK
        string ImageURL
        int DisplayOrder
    }

    LISTING {
        string ListingID PK
        string RoomID FK
        string LandlordID FK
        string Title
        string Description
        datetime CreatedAt
        datetime UpdatedAt
    }

    VIEWING_SCHEDULE {
        string ScheduleID PK
        string TenantID FK
        string RoomID FK
        datetime ViewDateTime
        string Status
        datetime CreatedAt
        datetime UpdatedAt
    }

    CONTRACT {
        string ContractID PK
        string TenantID FK
        string RoomID FK
        datetime StartDate
        datetime EndDate
        string Status
        float TotalPrice
        float Deposit
        datetime CreatedAt
        datetime UpdatedAt
    }

    PAYMENT {
        string PaymentID PK
        string ContractID FK
        datetime PaymentDate
        float Amount
        string Method
        string Status
    }

    REVIEW {
        string ReviewID PK
        string RoomID FK
        string TenantID FK
        int Rating
        string Content
        date ReviewDate
    }

    AI_MATCHING {
        string MatchingID PK
        string TenantID FK
        string RoomID FK
        float CompatibilityScore
        string Reason
        datetime CreatedAt
    }

    NOTIFICATION {
        string NotificationID PK
        string TargetID
        string Content
        string Type
        datetime CreatedAt
        string Status
    }

    %% RELATIONSHIPS

    LANDLORD ||--o{ ROOM : owns

    ROOM ||--|| LOCATION : located_at

    ROOM }o--o{ AMENITY : equipped_with
    ROOM_AMENITY }o--|| ROOM : maps
    ROOM_AMENITY }o--|| AMENITY : maps

    ROOM ||--o{ ROOM_IMAGE : has

    ROOM ||--|| LISTING : advertised_as

    TENANT ||--o{ VIEWING_SCHEDULE : books
    ROOM ||--o{ VIEWING_SCHEDULE : scheduled_for
    LANDLORD ||--o{ VIEWING_SCHEDULE : approves

    TENANT ||--o{ CONTRACT : signs
    ROOM ||--|| CONTRACT : rented_under

    CONTRACT ||--o{ PAYMENT : includes

    TENANT ||--o{ REVIEW : writes
    ROOM ||--o{ REVIEW : receives

    TENANT ||--o{ AI_MATCHING : receives
    ROOM ||--o{ AI_MATCHING : suggested_for

    TENANT ||--o{ NOTIFICATION : receives
    LANDLORD ||--o{ NOTIFICATION : receives

    ACCOUNT ||--|| TENANT : authenticates
    ACCOUNT ||--|| LANDLORD : authenticates

%%owns – (sở hữu / quản lý)
%%located_at – (định vị tại)
%%maps – (ánh xạ / liên kết trung gian)
%%has – (có)
%%advertised_as – (được quảng bá dưới dạng)